--- a/Rapport/content/app_panandtiltparameter.tex
+++ b/Rapport/content/app_panandtiltparameter.tex
@@ -5,6 +5,16 @@ for pan- og tilt-rammerne. Der henvises til figur \ref{fig:inerti_PTS}, og
 beregningerne tager udgangspunkt i rammernes mål:
 \({L_{1}} =0,292\) [m],
 \({L_{2}} =0,280\) [m], \({L_{3}}= 0,42\) [m], \({L_{4}} =0,246\) [m], \({L_{pro}}=0,04\) [m].
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[scale=0.7]
+\include*{./graphics/inerti_PTS}
+\end{tikzpicture}
+\caption[Skitse af Pan \& Tilt-rammerne]{Skitse af Pan \& Tilt-rammerne.}
+\label{fig:inerti_PTS}
+\end{figure}
+
 Den teoritiske beregning er foretaget ud fra følgende antagelser og simplificeringer:
 \begin{itemize}
 \item Aluminimumsprofilen, 40x40L, har en massefylde på \(\rho=1,5\) [kg/m], \citep[Kap. 2 side. 4]{alu_profil_desitet}.
