--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -19,7 +19,7 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \begin{tikzpicture}[auto, node distance=1cm,>=latex']
 \include*{./graphics/PTSoverview}
 \end{tikzpicture}
-\caption[Principskitse af PTS]{Principskitse af PTS med farvekoder.}
+\caption[Principskitse af PTS]{Principskitse af PTS.}
 \label{fig:overview_openloop_PTS}
 \end{figure}
 
