--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,8 +1,7 @@
 \part{Systemidentifikation}
 Denne del gennemgår den teoretiske beskrivelse af systemet.
-Der udvikles en matematisk model af PTS
-og med udgangspunkt i denne designes to regulatorer.
-Desuden drøftes transformationen fra kartesiske koordinater til sfæriske koordinater.
+Der udvikles en matematisk model af PTS og med udgangspunkt i denne vælges regulatortype.
+Desuden gennemgås transformationen fra kartesiske koordinater til sfæriske koordinater.
 
 \input{./content/PTS}
 \include{./content/kontrollerdesign}
