--- a/Rapport/content/tb_steadystatenoload.tex
+++ b/Rapport/content/tb_steadystatenoload.tex
@@ -1,13 +1,5 @@
-\begin{tabular}{r|r|r}
-$V_m$ [V]&$i_m$ [mA]&$\omega$ $\left[\frac{\text{ticks}}{\text{min}}\right]$\\\hline
-12,00&97&76564\\ %12,000&97&76564
-12,00&97&76741\\ %12,000&97&76741
-10,01&96&62963\\ %10,007&96&62963
-10,01&96&63379\\ %10,007&96&63379
-8,584&92&54255\\
-8,584&92&54374\\
-7,154&90&44835\\
-7,154&90&44089\\
-6,000&89&36489\\
-6,000&89&36224\\
+\begin{tabular}{l|r|r|r|r|r|r|r|r|r|r}
+\( V_m\) [V] & 12,00 & 12,00 & 10,01 & 10,01 & 8,584 & 8,584 & 7,154 & 7,154 & 6,000 & 6,000\\\hline
+\( i_m\) [mA] & 97 & 97 & 96 & 96 & 92 & 92 & 90 & 90 & 89 & 89\\\hline
+\( \omega \left[ \frac { \text{ticks} }{ \text{min} }  \right]  \) & 76564 & 76741 & 62963 & 63379 & 54255 & 54374 & 44835 & 44089 & 36489 & 36224
 \end{tabular}
