--- a/Rapport/graphics/high_house_2D_parabola.tex
+++ b/Rapport/graphics/high_house_2D_parabola.tex
@@ -1,5 +1,5 @@
 \begin{axis}[ 
-    xlabel=$\text{Afstand [m] - XY}$,
+    xlabel=$\text{Afstand [m]}$,
     ylabel=$\text{Højde [m] - Z}$,
     grid=major,
     ytick={0,1,...,5}, % Grid intervallet
