--- a/Rapport/graphics/parabola_in_xy_plane.tex
+++ b/Rapport/graphics/parabola_in_xy_plane.tex
@@ -39,17 +39,11 @@
 \fill (0,0) circle[radius=9pt] node[above]{TCS};
 \fill (0,-19.1) circle[ radius=9pt] node[below, right]{B};
 \fill (-18.29,-5.5) circle[ radius=9pt];
-%\fill (18.29,-5.5) circle[ radius=9pt] node[above]{E};
-
-\draw[->,red] (-18.29,-5.5) node[above,black]{D}--(30.54,9.19) node[above,black]{G};
-
+\draw[red] (-18.29,-5.5) node[above,black]{D}--(30.54,9.19) node[above,black]{G};
 \draw(-20,-5.5)--(20,-5.5);
 \draw(18.29,-5.5)--(0,0);
-
-
 \fill (19.4793,5.9) circle[radius=9pt] node[above]{SB};
-
-
+\fill (30.54,9.19) circle[radius=9pt];
 \coordinate (PP2) at (20,3.5);
 \coordinate (PP1) at (20,0);
 \draw (PP1) arc (0:16.9:20);
