--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -62,19 +62,20 @@ mens \(B\) er den viskøse friktionskoefficient.
 			{Eksperimentelt bestemte motorparametre.}
 	\label{tb:matmotorparametre}
 \end{figure}
+
 De eksperimentelt bestemte motorparametre står i tabel \ref{tb:matmotorparametre}.
 Det er vigtigt at bemærke, at de to motorer adskiller sig fra hinanden ved parameteren \(J_L\), som er belastningens
 inertimoment. Dette er ikke en egentlig motorparameter, men en parameter der udelukkende afhænger
 af pan- og tilt-rammernes masser, dimensioner og vinkel.
 Desuden er det værd at bemærke, at denne model ikke tager højde for statisk friktion og Coulomb-friktion,
-fordi de ikke, som den viskøse friktion, er lineære. Ikke desto mindre antages det, at Coulomb-friktionen under
-bevægelse giver en konstant dæmpning, der kan kompenseres for med en højere forstærkning.
+fordi de ikke, som den viskøse friktion, er lineære. 
+% Ikke desto mindre antages det, at Coulomb-friktionen under bevægelse giver en konstant dæmpning, der kan kompenseres for med en højere forstærkning.
 %Anders: Jeg tænker ikke denne er nødtvendig..
 %\todo[inline]{Skal vi bruge en kilde ang. Coulomb-friktion?}
 
 Med antagelse om at \(\omega\) og dens tidsafledte er 0,
-bestemmes Laplace-transformationen af ligning \ref{eq:matVm_transient3},
-og den resulterende overføringsfunktion findes i ligning \ref{eq:transOmega}.
+bestemmes Laplace-transformationen af ligning \ref{eq:matVm_transient3}.
+Den resulterende overføringsfunktion findes i ligning \ref{eq:transOmega}.
 \begin{equation}
 	\frac{\Omega\left(s\right)}{V_m\left(s\right)}=\frac{1}{k_1\cdot{}s^2+k_2\cdot{}s+k_3}
 	\label{eq:transOmega}
@@ -92,55 +93,11 @@ i ligning \ref{eq:transTheta}.
 \end{equation}
 DC-motorens overføringsfunktion afhænger af dens belastning,
 og belastningen (inertimomentet \(J_L\) der skal roteres) er indeholdt i konstanterne \(k_1\) og \(k_2\).
-Der er altså en separat overføringsfunktion \(G_m\left(s\right)\),
-da rammerne har forskelligt inertimoment.
-De to ydre inertimomenter benævnes hhv. \(J_{pan}\) og \(J_{tilt}\),
-og de to forskellige overføringsfunktioner benævnes hhv. \(G_{m,p}\) og \(G_{m,t}\).
-Bestemmelsen af inertimomenterne findes i afsnit \ref{sec:inertimoment}.
-
-\subsection{FPGA-modulerne}
-\label{subsec:matFPGA}
-FPGA'ens positionsencoders læser motorakslens rotation inden reduktionsgearingen, \(G_m\left(s\right)\).
-Da encoderopløsningen er 360 ticks pr. rotation \citep{emgmotor},
-vil gearingen i forholdet 1:3 gøre, at kvantiseringsintervallet af output-rotationen til rammerne,
-er \(\frac{1}{1080}\).
-Når der refereres til ticks, kan der altså konverteres til grader i det \(3 ticks = 1 \degree\).
-
-På FPGA'en genereres to PWM-signaler til den dobbelte H-bro ud fra to
-duty cycles som mikrocontrolleren leverer.
-PWM-signalerne forstærkes af H-broen til en amplitude på 12 [V],
-der driver motorerne.
-Overføringsfunktionen for disse duty cycles %- motorspændingsfald konvertering ønskes til reguleringen. Det 
-vælges at modellere konverteringen som en simpel lineær forstærkning af en duty cycle mellem -100 \% og +100 \%
-til en DC-spænding mellem -12 [V] og +12 [V]. Med denne simple model ændres systemets orden ikke,
-og det vurderes, at tidsforsinkelsen fra input duty cycle til motorbevægelse er negligerbar.
-Overføringsfunktionen fra duty cycle til DC-spænding står i ligning \ref{eq:transPWM}.
-\begin{equation}
-	PWM\left(s\right)=PWM=12
-	\label{eq:transPWM}
-\end{equation}
-% Anders: Jeg ser todo ikke som værende nødvendig.
-% \todo[inline,author=Mikael]{Dedikér et underafsnit til diskussion af tidsforsinkelser, digitale såvel som analoge.}
-
-\subsection{PTS's inertimoment}
-\label{sec:inertimoment}
-For at opnå den optimale respons, skal reguleringen tage højde for %at Pan \& Tilt-motorerne møder modstand i form af
-Pan \& Tilt-rammernes inertimoment. Inertimomentet kan bestemmes ved kendskab til rammernes
-masse og dimensioner. Beregningerne tager udgangspunkt i den simplificerede model skitseret i figur \ref{fig:inerti_PTS}.
-På figuren er rammernes enkelte længder markeret, og de er målt til \({L_{1}} =0,292\) [m],
-\({L_{2}} =0,280\) [m], \({L_{3}}= 0,42\) [m], \({L_{4}} =0,246\) [m], \({L_{pro}}=0,04\) [m].
-\begin{figure}[!th]
-\centering
-\begin{tikzpicture}[scale=0.8]
-\include*{./graphics/inerti_PTS}
-\end{tikzpicture}
-\caption[Skitse af Pan \& Tilt-rammerne]{Skitse af Pan \& Tilt-rammerne.}
-\label{fig:inerti_PTS}
-\end{figure}
-
-I appendix \ref{sec:inertimomentberegning} beregnes tilt-rammens inertimoment omkring tilt-aksen,
-pan-rammens inertimoment omkring pan-aksen,
-og tilt-rammens påvirkning på inertimomentet omkring pan-aksen diskuteres.
+% Der er altså en separat overføringsfunktion \(G_m\left(s\right)\),
+% da rammerne har forskelligt inertimoment.
+% De to ydre inertimomenter benævnes hhv. \(J_{pan}\) og \(J_{tilt}\),
+% og de to forskellige overføringsfunktioner benævnes hhv. \(G_{m,p}\) og \(G_{m,t}\).
+% Bestemmelsen af inertimomenterne findes i afsnit \ref{sec:inertimoment}.
 
 Inertimomenterne er givet ved ligningerne \ref{eq:matinerti_tilt_pan_fak},
 som beregnet i appendix \ref{sec:inertimomentberegning}.
@@ -157,6 +114,30 @@ som beregnet i appendix \ref{sec:inertimomentberegning}.
 \(J_{pan}\) er beregnet ud fra et konstant bidrag fra tilt-rammen under antagelsen om,
 at denne står tilnærmelsesvis lodret under hele bevægelsen.
 
+\subsection{FPGA-modulerne}
+\label{subsec:matFPGA}
+FPGA'en læser motorakslens rotation inden reduktionsgearingen.
+Da encoderopløsningen er 360 ticks pr. rotation \citep{emgmotor},
+vil gearingen 1:3 gøre, at opløsningen for én rotation af rammerne er 1080 ticks.
+Når der refereres til ticks, kan der altså konverteres til grader i det \(3\) ticks \( = 1 \degree\).
+
+På FPGA'en genereres to PWM-signaler til den dobbelte H-bro ud fra to
+duty cycles.
+PWM-signalerne forstærkes af H-broen til en amplitude på 12 [V],
+der driver motorerne.
+Overføringsfunktionen for PWM-generatoren %- motorspændingsfald konvertering ønskes til reguleringen. Det 
+modelleres som en forstærkning. 
+Duty cycle mellem -100\% og +100\% forstærkes
+til en DC-spænding mellem -12 [V] og +12 [V]. Med denne simple model ændres systemets orden ikke,
+og det vurderes, at tidsforsinkelsen fra input duty cycle til motorbevægelse er negligerbar.
+Overføringsfunktionen fra duty cycle til DC-spænding står i ligning \ref{eq:transPWM}.
+\begin{equation}
+	\text{PWM}\left(s\right)=\text{PWM}=12
+	\label{eq:transPWM}
+\end{equation}
+% Anders: Jeg ser todo ikke som værende nødvendig.
+% \todo[inline,author=Mikael]{Dedikér et underafsnit til diskussion af tidsforsinkelser, digitale såvel som analoge.}
+
 %\subsection{Pan- og tilt-systemernes åbensløjfeoverføringsfunktioner}
 \subsection{PTS's åbensløjfeoverføringsfunktioner}
 Hvert SISO-undersystem består af én PWM-blok på FPGA'en og en DC-motor med belastning.
@@ -166,7 +147,7 @@ står i ligningerne \ref{eq:transpantilt0}, og de er illustreret i figur \ref{fi
 \begin{align}
 \label{eq:transpantilt0}
 \begin{split}
-	G_{pan}\left(s\right)&=PWM\left(s\right)\cdot{}G_{m,p}\left(s\right)\\
+	G_{pan}\left(s\right)&=\text{PWM}\left(s\right)\cdot{}G_{m,pan}\left(s\right)\\
 	&=12\cdot{}\frac{1}
 			{\left(\frac{L_m\cdot{}\left(J_{pan}+J_m\right)}{K_t}\right)\cdot{}s^3
 			+\left(\frac{R_m\cdot{}\left(J_{pan}+J_m\right)+L_m\cdot{}B}{K_t}\right)\cdot{}s^2
@@ -174,7 +155,7 @@ står i ligningerne \ref{eq:transpantilt0}, og de er illustreret i figur \ref{fi
 	&\approx\frac{2,24\cdot{}10^6}{s^3 + 2,43\cdot{}10^3 \cdot{} s^2 + 1,03\cdot{}10^5\cdot{}s}
 	\\
 	\\
-	G_{tilt}\left(s\right)&=PWM\left(s\right)\cdot{}G_{m,t}\left(s\right)\\
+	G_{tilt}\left(s\right)&=\text{PWM}\left(s\right)\cdot{}G_{m,tilt}\left(s\right)\\
 	&=12\cdot{}\frac{1}
 			{\left(\frac{L_m\cdot{}\left(J_{tilt}+J_m\right)}{K_t}\right)\cdot{}s^3
 			+\left(\frac{R_m\cdot{}\left(J_{tilt}+J_m\right)+L_m\cdot{}B}{K_t}\right)\cdot{}s^2
@@ -188,15 +169,15 @@ står i ligningerne \ref{eq:transpantilt0}, og de er illustreret i figur \ref{fi
 \include*{./graphics/openloop1}
 \end{tikzpicture}
 \caption[Åbensløjfeoverføringsfunktioner]{Åbensløjfeoverføringsfunktionerne \(G_{pan}\left(s\right)\) og \(G_{tilt}\left(s\right)\).
-	Signalet \(d.c.\left(t\right)\) er en duty cycle mellem -100 \% og +100 \%.}
+	Signalet \(d.c.\left(t\right)\) er en duty cycle mellem -100\% og +100\%.}
 \label{fig:openloop1}
 \end{figure}
 
 Åbensløjfeoverføringsfunktionerne \(G_{pan}\) og \(G_{tilt}\) danner udgangspunktet
 for analysen der hører til designet af reguleringssløjferne.
-I afsnit \ref{subsec:verifikation} nedenfor diskuteres overføringsfunktionernes nøjagtighed,
-og der gives forslag til forbedring af modellen ift. det fysiske system som det fungerer
-i praksis.
+% I afsnit \ref{subsec:verifikation} nedenfor diskuteres overføringsfunktionernes nøjagtighed,
+% og der gives forslag til forbedring af modellen ift. det fysiske system som det fungerer
+% i praksis.
 
 \subsubsection{Verifikation}
 \label{subsec:verifikation}
@@ -212,13 +193,13 @@ Forsøget blev udført syv gange.
 
 Den målte vinkel skal differentieres, således at integratoren i \(G_{tilt}\) ikke gør,
 at fejlen i forhold til de målte data akkumuleres over tid.
-Måden den målte vinkel er blevet differentieret på er ved først at tilpasse en parabel
+Den målte vinkel differentieres ved at tilpasse en parabel
 til vinklen som funktion af tiden vha. Least Squares metoden. Herefter differentieres
 parablen, og den resulterende rette linje er altså et mål for vinkelhastigheden som funktion af tiden.
 
 \begin{figure}[th!]
 	\centering
-	\includegraphics[width=1\textwidth]{./graphics/openloopVelocity1.eps}
+	\includegraphics[width=0.7\textwidth]{./graphics/openloopVelocity1.eps}
 	\caption[Tilt åbensløjferespons, målt vs. teoretisk]
 		{Tilt åbensløjferespons, målt vs. teoretisk.
 		Den teoretiske respons for de syv rampe-inputs er markeret med blåt.
@@ -226,15 +207,13 @@ parablen, og den resulterende rette linje er altså et mål for vinkelhastighede
 	\label{fig:openloopV1}
 \end{figure}
 
-Figur \ref{fig:openloopV1} viser den målte vinkelhastighed samt den teoretiske vinkelhastighed,
+Figur \ref{fig:openloopV1} viser den målte samt teoretiske vinkelhastighed,
 som forudsagt af overføringsfunktionen \(s\cdot{}G_{tilt}\).
 Det ses på figur \ref{fig:openloopV1}, at den største afvigelse er en tidsforsinkelse.
-Dette skyldes, at visse PWM-duty cycles ikke kan bevæge systemet.
-Dødzonen af PWM-duty cycles, der ikke kan accelerere tilt-systemet er målt til at befinde sig inden for
-ca. \(\pm\) 12 \%, og for pan-systemet til ca. \(\pm\) 10 \%.
+Dette skyldes, at lave spændinger ikke kan bevæge systemet.
+Dødzonen af PWM-duty cycles, der ikke kan accelerere tilt-systemet er målt til at befinde sig inden for 14,56\% og for pan-systemet til 11,72\%.
 Udover forsinkelsen fra dødzonen kan man på figur \ref{fig:openloopV1} aflæse
 at den målte vinkelacceleration (hældningen af grafen) er marginalt mindre end den teoretiske.
-Det antages, at denne opførsel hovedsageligt skyldes Coulomb-friktion.
 
 Ønskes en mere nøjagtig matematisk model af PTS
 er det altså en mulighed at indsætte dødzonen og evt. den ekstra dæmpning i modellen.
@@ -245,17 +224,16 @@ og i simuleringer af systemet at indsætte de tilnærmede værdier for dødzonen
 \subsection{Koordinattransformation}
 \label{sec:koordinattransformation}
 De kartesiske koordinater \(P_c=\left[x, y, z\right]\) skal transformeres til sfæriske koordinater
-\(P_s=\left[\rho \text{ ; } \phi \text{ ; } \theta\right]\), hvor \(\phi\) og \(\theta\) bruges
-som vinkelbestemmelserne for hhv. tilt og pan og \(\rho\) er afstanden fra PTS til duen som funktion af tiden.
+\(P_s=\left[\rho \text{ ; } \phi \text{ ; } \theta\right]\), hvor \(\phi\) og \(\theta\) er vinklerne for hhv. tilt og pan, og \(\rho\) er afstanden fra PTS til lerduen.
 Til trackingen er kun \(\phi\) og \(\theta\) nødvendige.
 Positionbestemmelsen som funktion af tiden for det kartesiske koordinatsæt beskrives i appendix \ref{subsubsec:para}.
 Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordinatsystemets origo,
 skal PTS's rotationscenter PTS trækkes fra:
 \(PTS=[\text{19,2 ; 0 ; 0,45}]\). 
 
-\subsubsection{Kartesiske koordinater}
-Koordinattransformationen tager udgangspunkt i den kartesiske stedvektor \(Pos\left(t\right) \), ligning \ref{eq:ks:vektorparabel3d} samt PTS's offset.
-Origo flyttes, så kasteparablen kan beskrives ved stedvektor \(P_c\left(t\right)\), ligning \ref{eq:pf:stedvektorparabel}.
+\textbf{Flytning af origo}\\
+% Koordinattransformationen tager udgangspunkt i den kartesiske stedvektor \(Pos\left(t\right) \), ligning \ref{eq:ks:vektorparabel3d} samt PTS's offset.
+Origo flyttes, så kasteparablen kan beskrives ved vektor \(P_c\left(t\right)\), ligning \ref{eq:pf:stedvektorparabel}.
 \begin{align}
 \begin{split}
 { P }_{ c }\left(t\right)=Pos\left( t \right) -PTS = \left( \begin{matrix} - 9,34\cdot t-13,7 \\32,851\cdot t-19,3
@@ -263,7 +241,9 @@ Origo flyttes, så kasteparablen kan beskrives ved stedvektor \(P_c\left(t\right
 \label{eq:pf:stedvektorparabel}
 \end{split}
 \end{align}
-Sammenhængen mellem de kartesiske og de sfæriske koordinater kan ses på fig \ref{fig:thetaphi_degree}. 
+
+\textbf{Koordinattransformation}\\
+Sammenhængen mellem de kartesiske og de sfæriske koordinater kan ses på figur \ref{fig:thetaphi_degree}. 
 Med PTS'ets offset er origo for det sfæriske koordinatsystem PTS'ets rotationscenter (skæringspunktet mellem de to rotationsakser).
 
 \begin{figure}[!th]
@@ -271,17 +251,16 @@ Med PTS'ets offset er origo for det sfæriske koordinatsystem PTS'ets rotationsc
 \begin{tikzpicture}[scale=4]
 \include*{./graphics/3d_in_xyz_plane}
 \end{tikzpicture}
-\caption[Sfærisk koordinatsystem til koordinattransformation]{Viser duens placering i det sfæriske rum som funktion af  \(\phi\), \(\theta\) og \(\rho\).}
+\caption[Sfærisk koordinatsystem til koordinattransformation]{Viser lerduens placering i det sfæriske rum som funktion af  \(\phi\), \(\theta\) og \(\rho\).}
 \label{fig:thetaphi_degree}
 \end{figure}
 
-\subsubsection{Sfæriske koordinater}
 Som det fremgår af problemformuleringen modtager mikrocontrolleren lerduens
-position som kartetiske koordinationer med en frekvens på 120 [Hz].
+position som kartetiske koordinationer.
 Transformationen fra kartesiske koordinater til
 sfæriske koordinater gøres ud fra ligning \ref{eq:sv_koordi} nedenfor.
 \begin{align}
-{ P }_{ s }=\left( \begin{matrix} \phi  \\ \theta  \end{matrix} \right) =\left( \begin{matrix} { tan }^{ -1 }\left( \frac { \sqrt { { { P }_{ c_{ x } } }^{ 2 }+{ { P }_{ c_{ y } } }^{ 2 } }  }{ { P }_{ c_{ z } } }  \right)  \\ { tan }^{ -1 }\left( \frac { { P }_{ c_{ y } } }{ { P }_{ c_{ x } } }  \right)  \end{matrix} \right) 
+{ P }_{ s }=\left( \begin{matrix} \phi  \\ \theta  \end{matrix} \right) =\left( \begin{matrix} { tan }^{ -1 }\left( \frac { { P }_{ c_{ z } } }{ \sqrt { { { P }_{ c_{ x } } }^{ 2 }+{ { P }_{ c_{ y } } }^{ 2 } }  }  \right)  \\ { tan }^{ -1 }\left( \frac { { P }_{ c_{ y } } }{ { P }_{ c_{ x } } }  \right)  \end{matrix} \right) 
 \label{eq:sv_koordi}
 \end{align}
 hvor \(\phi\) og \(\theta\) er angivet i grader \citep[Kap. 10.6]{adam}.
