--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -122,7 +122,7 @@ I tabel \ref{tb:resistans} findes målingerne af strøm og spænding.
 Den målte strøm-spændingskarakteristik for DC-motoren er indtegnet på figur \ref{fig:resistans0}.
 \begin{figure}[th!]
 	\centering
-	\includegraphics[width=1\textwidth]{./graphics/resistans1.eps}
+	\includegraphics[width=0.7\textwidth]{./graphics/resistans1.eps}
 	\caption[Strøm-spændingskarakteristik for rotationslåst DC-motor]{Strøm-spændingskarakteristik for rotationslåst DC-motor ved steady-state.}
 	\label{fig:resistans0}
 \end{figure}
@@ -280,7 +280,7 @@ På figur \ref{fig:induktans0} er transientresponsen for spændingsfaldet over \
 sammen med de to spændingsniveauer, hvorudfra tidskonstanten bestemmes.
 \begin{figure}[th!]
 	\centering
-	\includegraphics[width=1\textwidth]{./graphics/induktans0.eps}
+	\includegraphics[width=0.7\textwidth]{./graphics/induktans0.eps}
 	\caption[Transientrespons for låst motor]
 		{Transientrespons for låst motor. De to vandrette røde linjer angiver spændingsniveauerne til bestemmelse af tidskonstanten.
 		Den øverste linje er ved 4 [V], mens den nederste linje er ved \(4\cdot \frac{1}{e}\)  [V].}
@@ -294,7 +294,7 @@ Spændingen har en amplitude på 2,4 [V] og et DC-offset på 2,5 [V].
 På figur \ref{fig:induktans1} er steady-state responsen for spændingsfaldene over DC-motoren og seriemodstanden indtegnet.
 \begin{figure}[th!]
 	\centering
-	\includegraphics[width=1\textwidth]{./graphics/induktans1.eps}
+	\includegraphics[width=0.7\textwidth]{./graphics/induktans1.eps}
 	\caption[Steady-state respons for låst motor]
 		{Steady-state respons for låst motor. Med mørkeblåt er markeret \(\mathbf{V_1}\) og med mørkegrønt \(\mathbf{V_2}\).
 		To tilpassede sinuskurver, fundet vha. MATLAB's fit-funktion, er indtegnet med lyseblåt og rødt.}
@@ -305,7 +305,7 @@ På figur \ref{fig:induktans1} er steady-state responsen for spændingsfaldene o
 På figur \ref{fig:induktans2} er induktansmålingerne fra LCR-meteret indtegnet.
 \begin{figure}[th!]
 	\centering
-	\includegraphics[width=1\textwidth]{./graphics/induktans2.eps}
+	\includegraphics[width=0.7\textwidth]{./graphics/induktans2.eps}
 	\caption[Induktans målt med LCR-meter]
 		{Induktanser målt ved forskellige testfrekvenser og motorpositioner med LCR-meteret.
 		For hver motorposition er der tegnet en linje gennem de 4-5 målepunkter.
@@ -519,24 +519,24 @@ Når loddet har ramt gulvet, og spændingsfaldet er 0 V, stoppes målingen, og f
 \subsubsection{Måleresultater}
 Diksen har en masse på 21,2 [g], en ydre radius på 1,25 [cm] og en indre radius på 5 [mm].
 Loddets masse er 851,7 [g].
-På figur \ref{fig:vemf0} er målingerne af \(V_{EMF}\) indtegnet.
-
-\begin{figure}[th!]
-	\centering
-	\includegraphics[width=1\textwidth]{./graphics/vemf0.eps}
-	\caption[Målt modelektromotorisk kraft ved acceleration af motor]
-		{Målt modelektromotorisk kraft ved acceleration af motor.
-		De indtegnede sorte streger viser hældningerne før og efter loddet ramte jorden.
-		På grafen vises målingerne fra flere forsøg sammen.}
-	\label{fig:vemf0}
-\end{figure}
+På figur \ref{fig:vemf1} er målingerne af \(V_{EMF}\) indtegnet.
+% 
+% \begin{figure}[th!]
+% 	\centering
+% 	\includegraphics[width=0.7\textwidth]{./graphics/vemf0.eps}
+% 	\caption[Målt modelektromotorisk kraft ved acceleration af motor]
+% 		{Målt modelektromotorisk kraft ved acceleration af motor.
+% 		De indtegnede sorte streger viser hældningerne før og efter loddet ramte jorden.
+% 		På grafen vises målingerne fra flere forsøg sammen.}
+% 	\label{fig:vemf0}
+% \end{figure}
 \subsubsection{Databehandling}
 Da målingerne er meget støjfyldte, valgtes det at lavpasfiltrere dem, så hældningsbestemmelsen
 ikke bliver påvirket af den højfrekvente støj.
 De lavpasfiltrerede data kan ses på figur \ref{fig:vemf1}.
 \begin{figure}[th!]
 	\centering
-	\includegraphics[width=1\textwidth]{./graphics/vemf1.eps}
+	\includegraphics[width=0.7\textwidth]{./graphics/vemf1.eps}
 	\caption[Målt modelektromotorisk kraft ved acceleration af motor, lavpasfiltreret]
 		{Målt modelektromotorisk kraft ved acceleration af motor, lavpasfiltreret.
 		De indtegnede sorte streger viser hældningerne før og efter loddet ramte jorden.
