--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -4,11 +4,11 @@ af f.eks. overvågningskameraer.
 Fælles for mange af sådanne trackingsystemer er, at de bruger et pan \& tilt system til at følge deres mål. 
 
 I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues bevægelse i 
-luften. For at udvikle et sådant system skal en passende regulator designes og implementeres
+luften. For at udvikle et sådant system skal passende regulatore designes og implementeres
 på en mikrocontroller. 
 %Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
-En FPGA  bruges til at holde læse systemets position og skrive ønsket PWM til motorerne. 
+En FPGA  bruges til at læse systemets position og generere ønsket PWM signal til motorerne. 
 Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
-\todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
+% \todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
