--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -1,19 +1,16 @@
 \section{Regulator}
 \label{sec:kontrollerdeign}
-Det er valgt at designe regulatoren efter processen illustreret i figur \ref{fig:designproces}.
-\begin{figure}[!th]
-\centering
-\include*{./graphics/designproces}
-\caption[Designprocessen]{Designprocessen, \citep[Side. 260]{reg_modern_control_systems}.}
-\label{fig:designproces}
-\end{figure}
+%%%Det gør vi jo ikke, men udkommenteret fordi det var Mikkels første Tikz
+% Det er valgt at designe regulatoren efter processen illustreret i figur \ref{fig:designproces}.
+% \begin{figure}[!th]
+% \centering
+% \include*{./graphics/designproces}
+% \caption[Designprocessen]{Designprocessen, \citep[Side. 260]{reg_modern_control_systems}.}
+% \label{fig:designproces}
+% \end{figure}
 
 Formålet med reguleringen er som beskrevet i afsnit \ref{sec:problemformulering},
-at kontrollere pan- og tilt-rammernes position, så de tracker en lerdue.
-Dette gøres ved styring af deres hastighed, ved at justere spændingsfaldene over de
-to DC-motorer. Spændingsfaldene styres af PWM-generatorer, og regulatoren
-kan derfor styre motorernes hastighed ved at vælge PWM-signalernes duty cycles.
-
+at kontrollere PTS's position.
 I afsnit \ref{sec:kravspecifikation} opstilles kravene til systemets respons.
 Disse er opsummeret nedenfor.
 \begin{itemize}
@@ -22,15 +19,9 @@ Disse er opsummeret nedenfor.
 \item \(TE \leq 1,02 \degree\) (Tracking Error efter \(t_s\))
 \end{itemize}
 
-Det er fastlagt i projektoplægget, at regulatoren skal implementeres på mikrocontrolleren.
-Da systemet som input modtager kartesiske koordinater,
-skal der også på mikrocontrolleren foregå en koordinattransformation
-til den logiske vinkelrepræsentation med sfæriske koordinater.
-Systemets konfiguration består altså af en koordinattransformation,
+Systemets konfiguration består af en koordinattransformation,
 en regulering, en aktuering og en positionsmåling, som illustreret
 i figur \ref{fig:digitalkontroller1}.
-Bemærk at denne konfiguration er for ét SISO-undersystem (enten pan eller tilt),
-og at mikrocontrolleren skal regulere begge SISO-undersystemer.
 \begin{figure}[!th]
 \centering
 % \begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
@@ -42,6 +33,7 @@ og at mikrocontrolleren skal regulere begge SISO-undersystemer.
 	De grønne ovaler angiver "clocksignaler", som leverer pulser til de digitale dele af systemet.}
 \label{fig:digitalkontroller1}
 \end{figure}
+
 Som beskrevet i afsnit \ref{sec:problemformulering},
 så er input-samplingen fastlagt til at foregå med en frekvens på 120 [Hz].
 Men som illustreret på figur \ref{fig:digitalkontroller1}, så skal reguleringssløjfen
@@ -89,10 +81,10 @@ er markeret på figur \ref{fig:digitalkontroller2}.
 \end{figure}
 
 Den diskretiserede åbensløjfeoverføringsfunktion fra duty cycle til output vinkel
-benævnes \(G_{zoh}\left(s\right)\). Dette er fordi D/A-konverteringen modelleres som et Zero Order Hold kredsløb,
+benævnes \(G_{zoh}\left(z\right)\). Dette er fordi D/A-konverteringen modelleres som et Zero Order Hold kredsløb,
 der fastholder en analog spænding proportional med duty cyclen. Dette stemmer overens med den simplificerede
 model for PWM-signalet beskrevet i afsnit \ref{subsec:matFPGA}.
-Den diskrete overføringsfunktions plads i blokdiagrammet for systemet
+Den diskrete overføringsfunktion \(G_{zoh}\left(z\right)\) plads i blokdiagrammet for systemet
 er indtegnet i figur \ref{fig:digitalkontroller3}.
 \begin{figure}[!th]
 \centering
@@ -105,8 +97,6 @@ er indtegnet i figur \ref{fig:digitalkontroller3}.
 		\(G_{zoh}\left(z\right)\) erstatter den kontinuerte del af systemet.}
 \label{fig:digitalkontroller3}
 \end{figure}
-De to overføringsfunktioner hhv. \(G_{pan}\left(s\right)\) og \(G_{tilt}\left(s\right)\)
-har hver en diskretiseret overføringsfunktion hhv. \(G_{zoh,pan}\left(z\right)\) og \(G_{zoh,tilt}\left(z\right)\).
 
 Kravet til \(G_{zoh,pan}\left(z\right)\) og \(G_{zoh,tilt}\left(z\right)\) er, at de
 med god tilnærmelse opfører sig som \(G_{pan}\left(s\right)\) og \(G_{tilt}\left(s\right)\),
@@ -114,54 +104,58 @@ og dette krav kan skrives som et mindstekrav til samplingfrekvensen \(f_s\).
 
 \subsubsection{Valg af samplingfrekvens}\label{subsec:choosefs}
 Reguleringssløjfen skal køre periodisk på mikroprocessoren
-med samplingfrekvensen \(f_s\). Denne skal vælges
-ud fra systemets dynamik (til diskretiseringen), som beskrevet ovenfor,
-fra samplingteoremet (Nyquist-frekvensen) samt ud fra
-mikrocontrollerens begrænsninger.
-
-Da samplingen af inputparablen (A/D-konverteringen) foregår fast ved 120 [Hz],
-som beskrevet i problemformuleringen, er rekonstruktionen
-af det oprindelige signal allerede her begrænset. Dvs. man
-ikke kan få mere information om det oprindelige signal
-uanset hvor hurtigt man sampler efter A/D-konverteringen af
-det oprindelige signal.
-Samplingfrekvensen på 120 [Hz] fortæller os,
-at det oprindelige signal kun er bevaret op til 60 [Hz].
-Hvis reguleringssløjfen køres med en frekvens på under 120 [Hz]
-vil \textit{mere} information gå tabt.
-Derfor skal reguleringssløjfen, ud fra samplingteoremet, helst køres
-ved minimum 120 [Hz].
-
+med samplingfrekvensen \(f_s\). \\
+\(f_s\) skal vælges
+ud fra systemets dynamik,
+%(til diskretiseringen), 
+fra inputparablens egenskaber samt 
+mikrocontrollerens begrænsninger. 
+Inputparablen er samplet ved 120 [Hz], 
+\(f_s\) skal derfor være større end 120 [Hz] for at bevare inputsignalets integritet \citep[Side. XXX]{dsp}. 
+\todo[inline, color=red!20]{find sidetal i dsp bog}
 Diskretiseringen af åbensløjfeoverføringsfunktionerne stiller også krav til samplingfrekvensen.
-Diskretiseringen skal altså sammenlignes med den kontinuerte overføringsfunktion.
+%Diskretiseringen skal altså sammenlignes med den kontinuerte overføringsfunktion.
 Det vælges at sammenligne diskretiseringen af det fysiske system med det kontinuerte system i tidsdomænet.
-Sløjfen lukkes med en forstærkning på 1, og step-responsens karakteristik sammenlignes
-for den diskretiserede overføringsfunktion \(\frac{G_{zoh,tilt}}{1+G_{zoh,tilt}}\)
-og for den kontinuerte overføringsfunktion \(\frac{G_{tilt}}{1+G_{tilt}}\) (en tilsvarende sammenligning foretages for pan).
-Diskretiseringen opfører sig med bedste tilnærmelse som det kontinuerte system
-når Rise Time, Settling Time og Overshoot efter diskretiseringen
-ændrer sig så lidt som muligt i forhold til responsen af det kontinuerte system.
-Det vurderes, at Rise Time og Settling Time maks. må ændre sig med 5 \% i forhold
-til den kontinuerte respons, mens at Overshoot maks. må ændre sig med 25 \% i forhold til
+% Sløjfen lukkes med en forstærkning på 1, og step-responsens karakteristik sammenlignes
+% for den diskretiserede overføringsfunktion \(\frac{G_{zoh,tilt}}{1+G_{zoh,tilt}}\)
+% og for den kontinuerte overføringsfunktion \(\frac{G_{tilt}}{1+G_{tilt}}\) (en tilsvarende sammenligning foretages for pan).
+Sløjfen lukkes med en forstærkning på 1, 
+og step-responsens karakteristik for den diskrete og kontinuere overføringsfunktion sammenlignes. 
+% Diskretiseringen opfører sig med bedste tilnærmelse som det kontinuerte system
+% når Rise Time, Settling Time og Overshoot efter diskretiseringen
+% ændrer sig så lidt som muligt i forhold til responsen af det kontinuerte system.
+Diskretiseringen vurderes at være tæt nok på den kontinuere model, hvis følgende krav opfyldes:
+Det vurderes, at Rise Time og Settling Time maks. må ændre sig med 5\% i forhold
+til den kontinuerte respons, mens at Overshoot maks. må ændre sig med 25\% i forhold til
 den kontinuerte respons.
-Dvs. det ikke kan tolereres hvis overshoot
-ved diskretiseringen ændrer sig fra 2 \% til 3 \%.
+
+\begin{figure}
+ \centering
+\begin{tabular}{lr}
+ Overshoot & 25\%\\
+ Rise Time & 5\%\\
+ Settling Time & 5\%\\
+\end{tabular}
+\caption{fejl}
+\end{figure}
+\todo[inline, color=red!20]{skal rettes til}
 
 Hvis diskretiseringen kræver at reguleringssløjfen kører ved en frekvens \(f_s\),
 der er højere end A/D-konverteringens 120 [Hz], skal det A/D-konverterede
 signal "upsamples" til \(f_s\).
-Upsamplingen har den simpleste implementering
-hvis \(f_s\) er et heltalsmultiplum af den første samplings frekvens (120 [Hz]) \citep[s. 562]{dsp}.
-Diskretiseringen af det fysiske systems åbensløjfeoverføringsfunktioner skal altså samples ved et heltalsmultiplum \(f_s\) af 120 [Hz].
+Upsamplingen er simplest at implementere
+hvis \(f_s\) er et heltalsmultiplum af (120 [Hz]) \citep[Side. 562]{dsp}.
+Det vælges derfor at sample ved et heltalsmultiplum \(f_s\) af 120 [Hz].
 
 På figur \ref{fig:diskretTiltStep} er stepresponsen for lukketsløjfesystemet (med forstærkning 1)
-med \(G_{tilt}\) indtegnet sammen med den tilsvarende steprespons for to forskellige diskretiseringer
+med \(G_{tilt}\) indtegnet sammen med den tilsvarende steprespons for tre forskellige diskretiseringer
 af \(G_{tilt}\). Som det ses af grafen, er det diskretiserede systems respons tættest
 på det kontinuerte systems respons når samplingfrekvensen er højest.
 \begin{figure}[!th]
 \centering
-	\includegraphics[width=1\textwidth]{./graphics/diskretTiltStep.eps}
-\caption[Sammenligning af steprespons for kontinuert system med diskretiseret system]
+	\includegraphics[width=0.8\textwidth]{./graphics/diskretTiltStep.eps}
+	\captionsetup{width=0.7\textwidth}
+\caption[Sammenligning af steprespons performance]
 {Sammenligning af steprespons for kontinuert system med diskretiseret system.
 Den mørkeblå kurve er det kontinuerte systems respons,
 og de andre kurver er det diskretiserede systems respons ved en samplingfrekvens på
@@ -186,9 +180,6 @@ Graferne viser ændringen af de tre størrelser i procent i forhold til det kont
 Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{tilt}$,
 mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{pan}$.
 }
-
-% Åses LateX kan ikke lide \math\ i todo, caption og tilsvarende.
-
 \label{fig:diskretStepFreq}
 \end{figure}
 
@@ -200,15 +191,10 @@ hvor kravene til diskretiseringens performance opfyldes.
 Figur \ref{fig:diskretTiltStep} og figur \ref{fig:diskretStepFreq}
 giver et grundlag for valg af reguleringssløjfens samplingfrekvens ud fra det fysiske systems dynamik.
 Hvis mikrocontrollerens begrænsninger tages med i betragtning vil man vælge den lavest acceptable
-samplingfrekvens af to årsager. Den ene årsag er, at jo højere periode, jo mindre CPU-belastning er der,
-og jo mere tid er der til mikrocontrollerens andre opgaver som fx kommunikation med en PC-terminal.
-Den anden årsag er, at reguleringssløjfen får mere tid til sine egne opgaver:
-Koordinattransformation, upsampling, regulering (behandling af fejlsignalet) og SPI-kommunikation skal alt sammen foregå
-inden for perioden \(\frac{1}{f_s}\).
+samplingfrekvens.
 
 Som udgangspunkt vælges derfor en samplingfrekvens på \(f_s=600 \mathrm{\left[Hz\right]}\),
-så diskretiseringen med god tilnærmelse har samme performance som det kontinuerte system,
-og så der er mest tid til reguleringssløjfens beregninger og SPI-kommunikation.
+så diskretiseringen med god tilnærmelse har samme performance som det kontinuerte system.
 
 \subsubsection{Analyse af den diskretiserede overføringsfunktion}
 I ligningerne \ref{eq:transpantilt1} findes de diskretiserede overføringsfunktioner.
@@ -237,27 +223,30 @@ ved lukketsløjfesystemet med en forstærkning på 1.
 Diskretiseringen sammenlignes i frekvensdomænet med det kontinuerte system
 i figur \ref{fig:diskretBode}, der viser Bode-plot for \(G_{pan}\) og \(G_{tilt}\) samt
 deres diskretiseringer (ved 600 [Hz]) \(G_{zoh,pan}\) og \(G_{zoh,tilt}\).
+\todo[inline, color=red!20]{lav om til tabel form}
 \begin{figure}[!th]
 \centering
-	\includegraphics[width=1\textwidth]{./graphics/diskretBode.eps}
-\caption[Sammenligning af Bode-plots af kontinuert system med diskretiseret system]
+	\includegraphics[width=0.8\textwidth]{./graphics/diskretBode.eps}
+	\captionsetup{width=0.7\textwidth}
+\caption[Sammenligning af Bode-plots]
 {Sammenligning af Bode-plots af kontinuert system med diskretiseret system.
 Den blå og den røde kurve angiver hhv. \(G_{pan}\) og \(G_{tilt}\) mens
 den grønne og den turkise kurve angiver hhv. \(G_{zoh,pan}\) og \(G_{zoh,tilt}\).
 }
 \label{fig:diskretBode}
 \end{figure}
+\todo[inline, color=red!20]{lav om fra rad/s til hz}
 Bemærk at figur \ref{fig:diskretBode} er en sammenligning af \textit{åben}sløjfeoverføringsfunktionernes
 frekvensrespons.
 
 Som det ses på grafen, følger det diskretiserede systems respons meget nøje det kontinuerte systems respons.
-Fejlen på størrelsen på responsen er meget lille i hele spektret,
+Fejlen på størrelsen af responsen er meget lille i hele spektret,
 mens fejlen på fasen er lille ved lave frekvenser og stiger ved høje frekvenser.
 
 \subsection{Upsampling}
 \label{subsec:upsampling}
 Da reguleringssløjfen, som beskrevet i afsnit \ref{subsec:choosefs}, køres med en frekvens på 600 [Hz],
-som er 5 gange højere end input-samplingfrekvensen, skal der altså foretages en upsampling.
+som er 5 gange højere end input-samplingfrekvensen, skal der foretages en upsampling.
 %Upsamplingen foretages med Zero Order Hold, hvorved ét sample ved 120 Hz indsættes 
 %som 5 samples ved 600 Hz.
 Upsamplingen indsætter mellem hvert input-sample 4 samples med værdien 0, så hvert input-sample
@@ -272,12 +261,10 @@ til gengæld heller ikke forsinkelsen af input-signalet.
 
 \subsection{Valg af regulatortype}
 \label{ss:ValgReg}
-Pga. de simplificerende antagler som er indeholdt i den matematiske model for systemet,
+Pga. de simplificerende antagelser som er indeholdt i den matematiske model for systemet,
 vil en åbensløjferegulering være et dårligt valg: den vil være følsom overfor afvigelser fra den
 matematiske model. Desuden er der fra projektoplægget krav om en lukketsløjferegulering.
 Den simpleste regulering ville være en konstant forstærkning af fejlsignalet.
-En integrering af fejlsignalet ville gøre, at fejlsignalet ville blive tvunget mod 0,
-og dette er ønsket ift. kravet om en tracking fejl på under 1,02\degree.
 De største krav stilles til systemets responstid og ikke så meget til udsvinget af responsen,
 og som udgangspunkt vælges derfor en PI-regulator.
 Hvis det er nødvendigt at nedjustere udsvinget kan det være nødvendigt at anvende en PID-regulator,
@@ -285,25 +272,23 @@ og derfor implementeres algoritmen til en PID-regulator på mikrocontrolleren.
 Hvis kun en PI-regulator er nødvendigt, kan man altså blot nulstille D-leddet.
 
 \subsubsection{Dødzone}
-For at regulatoren hurtigst muligt kan levere den nødvendige PWM-duty cycle til minimering af fejlsignalet,
-vælges det desuden at implementere et "bias", der tager højde for dødzonen.
-Bias er implementeret med en nedre duty cycle grænse på 0.97\% for pan og tilt.
+Da motorerne ikke kan rotere ved lave spændinger indeholder systemet dødzoner.
+Det er valgt at implementere "bias", der tager højde for dødzonerne.
+Bias er implementeret symmetrisk med en nedre duty cycle grænse på 0.97\% for pan og tilt.
 Deres respektive øvre grænser er hhv. 11,72\% og 14,65\%.
-Disse værdier er fundet eksperimentelt ved Trial-and-Error metoden under PID-justeringen.
+Disse værdier er fundet eksperimentelt.
 Hvis regulatoren returnerer en duty cycle mellem den nedre og øvre grænse, sættes duty cycle til dens øvre grænse.
 Dette medfører at motoreren kan justere sig ind, selvom fejlen er marginal.
-Den nedre grænse er bestemt således positionen er indenfor ét encoder tick.
 
 \subsubsection{Integratormætning}
 Mætningen på PWM-duty cyclen gør, at systemet ikke er lineær i dette område. Med integratormætning 
-tages højde for denne ulinearitet. Uden integratormætning kan det numeriske integrale blive enormt når 
-PWM-mætningen nås. Dette vil fører til stort overshoot og derved dårlig 
+tages der delvist højde for denne ulinearitet. Uden integratormætning kan det numeriske integrale blive enormt når 
+PWM-mætningen nås. Dette vil føre til stort overshoot og derved dårlig 
 performance. 
-Værdien for integratormætningen skal vælges med omhu, da valg af en for lille 
-mætning vil mindske effekten af integratorleddet i PID, 
+En for lille integratormætningen vil mindske effekten af integratorleddet i PID, 
 hvilket i værste tilfælde vil sætte integratorleddet ud af funktion.
-Et for højt valg vil føre til at tilføjelse af integratormætningen ikke vil ændre 
-performance, som ønsket.
+En for høj værdi vil føre til at tilføjelse af integratormætningen ikke vil ændre 
+performance.
 
 %Et passende valg af integratormætning vurderes til at være når ligning \ref{eq:integratorsaturation} 
 %overholdes.
