"low House" rettet til "low house"

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -6,7 +6,7 @@ Afskydning fra ”high house” (D) med PTS placeret på station 4 (B), jf. figu
 \begin{figure}[th!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/skeet_diagram_cropped_axes}
-\caption[Skitse af English Skeet]{Optegning af skyttepositioner samt lerduens flugt fra de to affyringsstationer hhv. "high house", "low House". PTS er placeret på position 4.}
+\caption[Skitse af English Skeet]{Optegning af skyttepositioner samt lerduens flugt fra de to affyringsstationer hhv. "high house", "low house". PTS er placeret på position 4.}
 \label{fig:ES}
 \end{figure}	
 
