Fejl med \degree tegn efter phi og theta rettet (\degree tegnet efter phi og theta er fjernet)

--- a/Rapport/graphics/3d_in_xyz_plane.tex
+++ b/Rapport/graphics/3d_in_xyz_plane.tex
@@ -14,8 +14,8 @@
 %draw projection on xy plane, and a connecting line
 \draw[dashed, color=red] (O) -- (Pxz);
 \draw[dashed, color=red] (P) -- (Pxz);
-\node (A) at (-0.55,0,-0.2) {\tiny \(90\degree-\theta\degree\)};
-\node (B) at (-0.21,0.55,-0.2) {\tiny \(90\degree-\phi\degree\)};
+\node (A) at (-0.55,0,-0.2) {\tiny \(90\degree-\theta\)};
+\node (B) at (-0.21,0.55,-0.2) {\tiny \(90\degree-\phi\)};
 \node (E) at (-0.55,0.625,-0.55) {\tiny \(\rho\)};
 \node (C) at (0.25,0,0.15) {\scriptsize Origo PTS};
 \node (D) at (-0.6,0.75,-0.75) {\scriptsize Lerdue};
