fixed a little graphix

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -186,9 +186,9 @@ Ved omskrivning af ligning \ref{eq:rltimeconstant} kan induktansen altså bestem
 \paragraph{Metode 2\\}
 Forhindres motoren i at rotere, vil vinkelhastigheden som beskrevet i afsnit \ref{ss:eksperiment1} være nul.
 Ved denne metode er vi interesseret i systemets steady-state respons.
-Forbindes en modstand \(R_{s1}\) i serie med DC-motoren som vist på figur ref{fig:eksperiment2metode2}
+Forbindes en modstand \(R_{s1}\) i serie med DC-motoren som vist på figur \ref{fig:eksperiment2metode2}
 vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm_0}.
-\todo[inline,author=Mikael]{Indsæt DC-offset \(V_{DC}\) i figur \ref{fig:eksperiment2metode2}.}
+\todo[inline,author=Mikael]{Få figur \ref{fig:eksperiment2metode2} til at ligne ELE Øvelse 7 med V1 og V2 indtegnet!}
 \begin{figure}[!th]
 \centering
 \begin{circuitikz}
