--- a/Rapport/graphics/Mangleratblivetegnet3.tex
+++ b/Rapport/graphics/Mangleratblivetegnet3.tex
@@ -1,6 +1,6 @@
 \draw
-(-2,0) to[sV, l^=\(10kHz\)]  ++(0,3)
-to[R, l^=\(R_s1\)] ++(2,0)
+(-2,0) to[sV, l^=\(10\text{ [kHz]}\)]  ++(0,3)
+to[R, l^=\(R_{s1}\)] ++(2,0)
 to[R, l^=\(R_m\)] ++(2,0)
 to[L, l^=\(L_m\)] ++(2,0)
 to ++(0,-3)
