hvad er det for noget sjusk gutter!

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -16,7 +16,7 @@ Disse er opsummeret nedenfor.
 \begin{itemize}
 \itemsep1pt
 \item \(t_{s} \leq 0,557 \mathrm{\left[s\right]}\) (Settling Time)
-\item \(TE \leq 1,02\degree\) (TrackingError efter \(t_s\))
+\item \(TE \leq 1,02\degree\) (Trackingfejl efter \(t_s\))
 \end{itemize}
 
 Systemets konfiguration består af en koordinattransformation,
