mellemrum mellem 600 og [Hz].

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -193,7 +193,7 @@ giver et grundlag for valg af reguleringssløjfens samplingfrekvens ud fra det f
 Hvis mikrocontrollerens begrænsninger tages med i betragtning vil man vælge den lavest acceptable
 samplingfrekvens.
 
-Som udgangspunkt vælges derfor en samplingfrekvens på \(f_s=600 \mathrm{\left[Hz\right]}\),
+Som udgangspunkt vælges derfor en samplingfrekvens på \(f_s=600 \text{ [Hz]}\),
 så diskretiseringen med god tilnærmelse har samme performance som det kontinuerte system.
 
 \subsubsection{Analyse af den diskretiserede overføringsfunktion}
