man kan ikke sige "En for lille integratormætningen" - det er derfor rettet til "En for lille integratormætning".

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -284,7 +284,7 @@ Mætningen på PWM-duty cyclen gør, at systemet ikke er lineær i dette område
 tages der delvist højde for denne ulinearitet. Uden integratormætning kan det numeriske integrale blive enormt når 
 PWM-mætningen nås. Dette vil føre til stort overshoot og derved dårlig 
 performance. 
-En for lille integratormætningen vil mindske effekten af integratorleddet i PID, 
+En for lille integratormætning vil mindske effekten af integratorleddet i PID, 
 hvilket i værste tilfælde vil sætte integratorleddet ud af funktion.
 En for høj værdi vil føre til at tilføjelse af integratormætningen ikke vil ændre 
 performance.
