der manglede punktum i fodnoter.

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -9,7 +9,7 @@ Følgende opgaver til FPGA'en er fastsat af projektbeskrivelsen:
 	\item Generering af PWM-signaler til motorerne på PTS.
 	\item Optælling af motorernes rotationer vha. encoderne på PTS.
 \end{itemize}
-I projektet er der anvendt et BASYS2 board\footnote{Datablad \citep{basys2}}, der programmeres i VHDL\footnote{VHSIC Hardware Description Language}.
+I projektet er der anvendt et BASYS2 board\footnote{Datablad \citep{basys2}.}, der programmeres i VHDL\footnote{VHSIC Hardware Description Language.}.
 
 \subsection{Valg i opbygning af FPGA funktionalitet}
 Eftersom de fleste krav til FPGA'en er givet af projektbeskrivelsen, er der ikke 
